--- a/todo.org
+++ b/todo.org
@@ -1,6 +1,17 @@
-* TODO Proper constructors for board class
-* TODO Function to playout game randomly
-* TODO Restructure go.cpp to just be a demo
-* TODO Add command line interface for the demo with args etc
-* TODO Proper style across all files
+* DONE Proper constructors for board class
+CLOSED: [2019-02-01 Fri 15:52]
+* DONE Function to playout game randomly
+CLOSED: [2019-02-01 Fri 16:48]
+* DONE Restructure go.cpp to just be a demo
+CLOSED: [2019-02-01 Fri 16:48]
+* DONE Add command line interface for the demo with args etc
+CLOSED: [2019-02-01 Fri 16:48]
+* DONE Proper style across all files
+CLOSED: [2019-02-01 Fri 17:38]
 * TODO Readme: Include timing command and statement about the command line parsing
+* DONE Get available moves just gives empty locations + "pass", not the actual valid moves!
+CLOSED: [2019-02-01 Fri 17:39]
+* TODO Game logic still not okay: Suicide moves that kill the surrounding group should be okay!
+* DONE How to raise an exception if the thing bugs? E.g.: Supplying the wrong player color
+CLOSED: [2019-02-01 Fri 17:39]
+* TODO Check if a certain move is even valid before playing it!
